--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,10 @@
             <li class="item">
               <a href="">
                 <img src="./images/tehnokryak.jpg" alt="Нотбук" width="370" />
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
+                <div class="caption">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -90,8 +92,10 @@
                   alt="Бескетбол"
                   width="370"
                 />
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
+                <div class="caption">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -101,50 +105,64 @@
                   alt="Банер ресторана"
                   width="370"
                 />
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
+                <div class="caption">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/headphones.jpg" alt="Наушники" width="370" />
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
+                <div class="caption">
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/boxes.jpg" alt="Коробки" width="370" />
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">Приложение</p>
+                <div class="caption">
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/monitor.jpg" alt="Монитор" width="370" />
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
+                <div class="caption">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/book.jpg" alt="Книга" width="370" />
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
+                <div class="caption">
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/lab.jpg" alt="Лейба" width="370" />
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">Маркетинг</p>
+                <div class="caption">
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="">
                 <img src="./images/business.jpg" alt="Нотбук" width="370" />
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Приложение</p>
+                <div class="caption">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
