--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
   <body class="page">
     <!-- Шапка сайта -->
-
     <header class="page-header">
       <nav class="main-nav">
         <a href="./index.html" class="header-logo">
@@ -56,17 +55,14 @@
 
     <main>
       <!-- Герой -->
-
-      <div class="hero-img">
-        <section class="hero">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="button hero" type="submit">Заказать услугу</button>
-        </section>
-      </div>
+      <section class="hero section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="button hero" type="submit">Заказать услугу</button>
+      </section>
 
       <!-- Преимущества -->
-      <div class="benefits container">
-        <section class="section">
+      <section class="section">
+        <div class="benefits container">
           <!-- <h2 class="section-title">Преимущества</h2> -->
           <ul class="features list">
             <li class="item">
@@ -98,13 +94,12 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <!-- Чем мы занимаемся -->
-
-      <div class="container">
-        <section class="section">
+      <section class="section">
+        <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
             <li class="item">
@@ -125,8 +120,8 @@
               <img src="./images/box3.jpg" alt="планшет" width="370" />
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <!-- Наша команда -->
       <section class="team-block section">
@@ -167,8 +162,7 @@
     </main>
 
     <!-- Футер -->
-
-    <footer>
+    <footer class="ftr">
       <div class="page-footer">
         <a href="./index.html" class="footer-logo">
           <span class="logo-color">Web</span>Studio</a
