--- a/portfolio.html
+++ b/portfolio.html
@@ -172,7 +172,7 @@
 
     <!-- Футер -->
 
-    <footer>
+    <footer class="ftr">
       <div class="page-footer">
         <a href="./index.html" class="footer-logo">
           <span class="logo-color">Web</span>Studio</a
