--- a/index.html
+++ b/index.html
@@ -29,28 +29,30 @@
   <body class="page">
     <!-- Шапка сайта -->
     <header class="page-header">
-      <nav class="main-nav">
-        <a href="./index.html" class="header-logo">
-          <span class="logo-color">Web</span>Studio</a
-        >
+      <div class="nav-contacts">
+        <nav class="main-nav">
+          <a href="./index.html" class="header-logo">
+            <span class="logo-color">Web</span>Studio</a
+          >
 
-        <ul class="site-nav list">
-          <li class="item"><a href="" class="link current">Студия</a></li>
+          <ul class="site-nav list">
+            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="contacts-header list">
           <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
           </li>
-          <li class="item"><a href="" class="link">Контакты</a></li>
+          <li class="item">
+            <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="contacts-header list">
-        <li class="item">
-          <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a href="+380961111111" class="contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
@@ -61,8 +63,8 @@
       </section>
 
       <!-- Преимущества -->
-      <section class="section">
-        <div class="benefits container">
+      <section class="benefits section">
+        <div class="container">
           <!-- <h2 class="section-title">Преимущества</h2> -->
           <ul class="features list">
             <li class="item">
