--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body class="page">
     <!-- Шапка сайта -->
     <header class="page-header">
-      <div class="nav-contacts">
+      <div class="container">
         <nav class="main-nav">
           <a href="./index.html" class="header-logo">
             <span class="logo-color">Web</span>Studio</a
@@ -165,7 +165,7 @@
 
     <!-- Футер -->
     <footer class="ftr">
-      <div class="page-footer">
+      <div class="container">
         <a href="./index.html" class="footer-logo">
           <span class="logo-color">Web</span>Studio</a
         >
