--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <!-- Шапка сайта -->
 
     <header class="page-header">
-      <div class="nav-contacts">
+      <div class="container">
         <nav class="main-nav">
           <a href="./index.html" class="header-logo">
             <span class="logo-color">Web</span>Studio</a
@@ -175,7 +175,7 @@
     <!-- Футер -->
 
     <footer class="ftr">
-      <div class="page-footer">
+      <div class="container">
         <a href="./index.html" class="footer-logo">
           <span class="logo-color">Web</span>Studio</a
         >
