--- a/portfolio.html
+++ b/portfolio.html
@@ -182,7 +182,7 @@
         <address>
           <p class="adress-footer">г. Киев, пр-т Леси Украинки, 26</p>
           <div class="contacts-footer">
-            <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
+            <a href="info@example.com" class="contact">info@devstudio.com</a>
             <br />
             <a href="+380961111111" class="contact">+38 096 111 11 11</a>
           </div>
