--- a/index.html
+++ b/index.html
@@ -170,12 +170,23 @@
           <span class="logo-color">Web</span>Studio</a
         >
         <address>
-          <p class="adress-footer">г. Киев, пр-т Леси Украинки, 26</p>
-          <div class="contacts-footer">
-            <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
-            <br />
-            <a href="+380961111111" class="contact">+38 096 111 11 11</a>
-          </div>
+          <ul class="contacts-footer list">
+            <li>
+              <a
+                class="adress-footer"
+                href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contact">
+              <a href="info@devstudio.com" class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact">
+              <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+            </li>
+          </ul>
         </address>
       </div>
     </footer>
