--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
       <div class="container">
         <section class="section">
-          <!-- <h1 class="our-works">Наши работы</h1> -->
+          <h1 hidden>Наши работы</h1>
           <ul class="filter">
             <li class="item">
               <button class="button filter" type="button">Все</button>
@@ -189,9 +189,7 @@
               >
             </li>
             <li class="contact">
-              <a href="info@devstudio.com" class="contact"
-                >info@devstudio.com</a
-              >
+              <a href="info@example.com" class="contact">info@devstudio.com</a>
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
