--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Преимущества -->
       <section class="benefits section">
         <div class="container">
-          <!-- <h2 class="section-title">Преимущества</h2> -->
+          <h2 hidden>Преимущества</h2>
           <ul class="features list">
             <li class="item">
               <h3 class="title">Внимание к деталям</h3>
@@ -179,9 +179,7 @@
               >
             </li>
             <li class="contact">
-              <a href="info@devstudio.com" class="contact"
-                >info@devstudio.com</a
-              >
+              <a href="info@example.com" class="contact">info@devstudio.com</a>
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
