--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               >
             </li>
             <li class="contact">
-              <a href="info@example.com" class="contact">info@devstudio.com</a>
+              <a href="info@example.com" class="contact">info@example.com</a>
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
