--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
     <main>
       <!-- Филтр -->
 
-      <div class="container">
-        <section class="section">
+      <section class="section">
+        <div class="container">
           <h1 hidden>Наши работы</h1>
           <ul class="filter">
             <li class="item">
@@ -79,7 +79,7 @@
 
           <ul class="gallery list">
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/tehnokryak.jpg" alt="Нотбук" width="370" />
                 <div class="caption">
                   <h2 class="title">Технокряк</h2>
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img
                   src="./images/basketball.jpg"
                   alt="Бескетбол"
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img
                   src="./images/seafood.jpg"
                   alt="Банер ресторана"
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/headphones.jpg" alt="Наушники" width="370" />
                 <div class="caption">
                   <h2 class="title">Проект Prime</h2>
@@ -123,7 +123,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/boxes.jpg" alt="Коробки" width="370" />
                 <div class="caption">
                   <h2 class="title">Проект Boxes</h2>
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/monitor.jpg" alt="Монитор" width="370" />
                 <div class="caption">
                   <h2 class="title">Inspiration has no Borders</h2>
@@ -141,7 +141,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/book.jpg" alt="Книга" width="370" />
                 <div class="caption">
                   <h2 class="title">Издание Limited Edition</h2>
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/lab.jpg" alt="Лейба" width="370" />
                 <div class="caption">
                   <h2 class="title">Проект LAB</h2>
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link" href="">
                 <img src="./images/business.jpg" alt="Нотбук" width="370" />
                 <div class="caption">
                   <h2 class="title">Growing Business</h2>
@@ -168,8 +168,8 @@
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!-- Футер -->
@@ -189,7 +189,7 @@
               >
             </li>
             <li class="contact">
-              <a href="info@example.com" class="contact">info@devstudio.com</a>
+              <a href="info@example.com" class="contact">info@example.com</a>
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
