--- a/index.html
+++ b/index.html
@@ -175,19 +175,19 @@
         >
         <address>
           <ul class="contacts-footer list">
-            <li>
+            <li class="item">
               <a
                 class="adress-footer"
                 href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="info@example.com" class="contact" lang="en"
                 >info@example.com</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
             </li>
           </ul>
