--- a/index.html
+++ b/index.html
@@ -136,13 +136,17 @@
           <ul class="our-team list">
             <li class="item">
               <img src="./images/team_card1.jpg" alt="фото Игоря" width="270" />
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="caption">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team_card2.jpg" alt="фото Ольги" width="270" />
-              <h3 class="title">Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+              <div class="caption">
+                <h3 class="title">Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -150,8 +154,10 @@
                 alt="фото Николая"
                 width="270"
               />
-              <h3 class="title">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="caption">
+                <h3 class="title">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -159,8 +165,10 @@
                 alt="фото Михаила"
                 width="270"
               />
-              <h3 class="title">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="caption">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
